[FE] hover effect for delivery date picker menu

--- a/front-end/src/containers/Menus/components/MenuDatePicker/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuDatePicker/styles.scss
@@ -48,6 +48,7 @@
             &:hover {
               background-color: #F7F7F7;
               box-shadow: $shadow-primary;
+              border-left: 4px solid #40B07A;
             }
           }
         }
