--- a/front-end/src/containers/HelpCenter/components/HelpRecentActivityList/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpRecentActivityList/styles.scss
@@ -2,15 +2,17 @@
 
 .help-recent-activity-list {
   .help-recent-activity-list-title {
-    font-size: $medium-font-size;
-    font-family: 'Montserrat-Bold';
+    font-size: 45px;
+    font-family: 'Montserrat-SemiBold';
     opacity: 0.8;
     color: #333333;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 5px;
   }
 
-  .img-load-more {
-    height: 18px;
+  .help-recent-activity-list-subtitle {
+    color: #333333;
+    text-align: center;
+    margin-bottom: 40px;
   }
 }
