--- a/front-end/src/containers/GiftCards/components/GiftDatePicker/styles.scss
+++ b/front-end/src/containers/GiftCards/components/GiftDatePicker/styles.scss
@@ -1,41 +1,33 @@
 @import "../../../../styles/variables/variables";
 
 .gift-datepicker {
-  .react-datepicker-wrapper, .react-datepicker__input-container {
-    width: 100%;
+  position: relative;
+
+  input {
+    color: #B7CBB8;
   }
 
-  .gift-datepicker-input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    border: 1px solid #B7CBB8;
-    border-radius: 4px;
-    height: 80px;
-    
-    span {
-      color: #B7CBB8;
-      font-size: $footer-secondary-font-size;
-      font-family: 'Montserrat-Medium';
-    }
+  .react-datepicker-wrapper {
+    position: absolute;
+    right: 20px;
+    top: 22px;
 
-    img {
+    .gift-datepicker-input {
       height: 36px;
     }
   }
 
+  .react-datepicker-popper {
+    left: -200px !important;
+    .react-datepicker__triangle {
+      left: calc(100% - 30px) !important;
+    }
+  }
+
   @media (max-width: 710px) {
-    .gift-datepicker-input {
-      height: 48px;
-      padding: 0 15px;
-
-      span {
-        font-size: $mobile-regular-font-size;
-        font-family: 'Montserrat-Regular';
-      }
-
-      img {
+    .react-datepicker-wrapper {
+      top: 8px;
+      .gift-datepicker-input {
         height: 21px;
       }
     }
