[FE] add logo to invitation modal.  link redeem

--- a/front-end/src/containers/Modals/InvitationModal/styles.scss
+++ b/front-end/src/containers/Modals/InvitationModal/styles.scss
@@ -119,6 +119,13 @@
         height: 20px;
         float: right;
       }
+
+      .img-prize {
+        height: 210px;
+        margin-top: 50px;
+        margin-left: 50%;
+        transform: translateX(-50%);
+      }
     }
   }
 }
