[FE] help center revamp

--- a/front-end/src/containers/HelpCenter/styles.scss
+++ b/front-end/src/containers/HelpCenter/styles.scss
@@ -32,12 +32,12 @@
 
     .div-still-need-help {
       text-align: center;
-      margin-top: 80px;
+      margin-top: 120px;
 
       .btn-need-help {
         width: 306px;
         height: 67px;
-        font-family: 'Montserrat-Bold';
+        font-family: 'Montserrat-Medium';
         border-radius: 4px;
       } 
     }
