--- a/front-end/src/containers/HelpCenter/components/HelpRecentActivity/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpRecentActivity/styles.scss
@@ -3,11 +3,6 @@
 .help-recent-activity {
   color: #333333;
 
-  .help-recent-activity-title {
-    font-size: 30px;
-    margin-left: 5px;
-  }
-
   .help-recent-activity-content {
     font-size: 24px;
     display: flex;
@@ -17,22 +12,28 @@
     margin-top: 5px;
 
     .help-recent-activity-question {
+      display: flex;
+      align-items: center;
+
+      img {
+        height: 28px;
+        margin-right: 30px;
+      }
+
+      span {
+        flex-shrink: 0;
+        font-family: 'Montserrat-Medium';
+      }
+
       &:hover {
         text-decoration: underline;
-      }
-    }
-
-    .help-recent-activity-info {
-      img {
-        height: 26px;
-        margin-left: 30px;
       }
     }
   }
 
   .help-recent-activity-answer {
     font-size: 24px;
-    color: #333333;
+    color: #888888;
     margin-top: 40px;
     max-width: 640px;
   }
