[FE] redeem credit page

--- a/front-end/src/containers/Settings/styles.scss
+++ b/front-end/src/containers/Settings/styles.scss
@@ -22,9 +22,9 @@
   }
 
   .div-settings-contact {
-    padding: 70px 0 200px;
+    padding: 120px 0 120px;
     text-align: center;
-    background-color: white;
+    background-color: #F1F1F1;
     border-top: 1px solid #C6C4C4;
     color: $text-light-gray;
     font-size: $small-font-size;
