[FE] update menus header

--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -104,7 +104,7 @@
     }
   }
 
-  @media (max-width: 1365px) {
+  @media (max-width: 1200px) {
     .div-separator {
       margin: 0 20px;
     }
@@ -112,12 +112,20 @@
       display: none;
     }
     .div-menus-header-right {
-      .div-zip-code, .div-separator {
-        display: none;
+      .div-zip-code {
+        margin-right: 0;
       }
       .div-search-container {
         margin-left: 0;
         width: 250px;
+      }
+    }
+  }
+
+  @media (max-width: 900px) {
+    .div-menus-header-right {
+      .div-zip-code, .div-separator {
+        display: none;
       }
     }
   }
