--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -26,45 +26,50 @@
   }
 
   .dropdown__content {
-    background-image: url('../../../../../../assets/images/popup.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 243px;
-    height: 289px;
-    margin-left: -34px;
+    background-color: white;
+    border: 0.5px solid #70707050;
+    border-radius: 15px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.16);
+    width: 285px;
+    height: 200px;
+    margin-left: -100px;
     margin-top: 5px;
-    padding-top: 20px;
+    padding-top: 18px;
     animation-name: dropdown-animation;
     animation-duration: 0.5s;
     transform-origin: left top;
+    overflow: hidden;
 
     .div-menu {
       color: $text-light-gray;
-      padding: 0 20px;
-      height: 60px;
-      margin-top: 20px;
+      padding: 0 24px;
+      margin-bottom: 5px;
+      height: 51px;
       font-size: $mobile-regular-font-size;
       display: flex;
       align-items: center;
 
       img {
         height: 30px;
-        margin-right: 30px;
+        margin-right: 20px;
       }
 
       &:hover {
-        color: white;
-        background: $green-primary;
-        opacity: 0.6;
-        text-shadow: $shadow-primary;
-        -webkit-text-stroke-width: 0.05px;
-        -webkit-text-stroke-color: $text-light-gray;
+        background: #B5E8B7;
+        box-shadow: 2px 2px 6px rgba(0,0,0,0.16);
       }
+    }
+  }
+
+  @media (max-width: 710px) {
+    .dropdown__content {
+      margin-left: -150px;
     }
   }
 
   @media (max-width: 414px) {
     .dropdown__content {
+      margin-top: 10px;
       .div-menu {
         font-size: 12px;
       }
