--- a/front-end/src/containers/Menus/components/MenuItem/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuItem/styles.scss
@@ -12,6 +12,11 @@
     min-height: 240px;
     height: 0;
     border-bottom: 1px solid $border-gray;
+
+    img {
+      border-top-left-radius: 10px !important;
+      border-top-right-radius: 10px !important;
+    }
   }
 
   .div-menu-item-name-description {
