--- a/front-end/src/containers/Home/components/Feedback/styles.scss
+++ b/front-end/src/containers/Home/components/Feedback/styles.scss
@@ -27,7 +27,7 @@
 .div-feedback {
   position: relative;
   width: 574px;
-  height: 197px;
+  height: 240px;
   display: inline-block;
   margin: 20px;
 
@@ -61,10 +61,13 @@
     .div-feedback-content {
       color: $text-light-gray;
       font-size: $mobile-regular-font-size;
-      margin-right: 30px;
-      margin-top: 20px;
+      // margin-right: 30px;
+      // margin-top: 20px;
       overflow: hidden;
       text-align: left;
+      margin: auto;
+      margin-top: 20px;
+      margin-right: 20px;
     }
   }
 }
