--- a/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
+++ b/front-end/src/containers/Checkout/components/CheckoutStepForm/styles.scss
@@ -5,7 +5,7 @@ $checkout-header-height: 108px;
 
 .checkout-step-form-container {
   background-color: white;
-  border: 1px solid $light-green-primary;
+  border: 1px solid #42AA48;
   box-shadow: $shadow-primary;
 
   .checkout-step-form-separator {
