--- a/front-end/src/containers/HelpCenter/components/HelpRecentActivity/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpRecentActivity/styles.scss
@@ -34,7 +34,8 @@
   .help-recent-activity-answer {
     font-size: 24px;
     color: #888888;
-    margin-top: 40px;
+    margin-left: 40px;
+    margin-top: 20px;
     max-width: 640px;
   }
 
