--- a/front-end/src/containers/Root/components/DropdownFooter/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/styles.scss
@@ -20,11 +20,36 @@
       margin-bottom: 10px;
       cursor: pointer;
 
-      a {
+      .div-social-link {
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 20px;
+        height: 20px;
         margin-right: 20px;
+        transition: background-image .25s linear;
+      }
 
-        img {
-          height: 20px;
+      #facebook {
+        background-image: url('../../../../assets/images/facebook.svg');
+
+        &:hover {
+          background-image: url('../../../../assets/images/facebook_highlight.svg');
+        }
+      }
+
+      #twitter {
+        background-image: url('../../../../assets/images/twitter.svg');
+
+        &:hover {
+          background-image: url('../../../../assets/images/twitter_highlight.svg');
+        }
+      }
+
+      #instagram {
+        background-image: url('../../../../assets/images/instagram.svg');
+
+        &:hover {
+          background-image: url('../../../../assets/images/instagram_highlight.svg');
         }
       }
     }
